--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="overlay"></div>
     <div class="container">
         <nav>
-            <h1 class="brand"><a href="#">Axiom<span>Thesis</span></a></h1>
+            <h1 class="brand"><a href="#">Christopher<span>Oakley</span></a></h1>
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Blog</a></li>
@@ -29,7 +29,8 @@
     </div>
     <div class="banner">
       <div class="title">
-        <h1>AxiomThesis</h1>
+        <h1>Christopher Oakley</h1>
+        <h2>Professional Problem Solver</h2>
         <p>A collection of engineering articles and random bits of knowledge with bits of the world thrown within.</p>
       </div>
     </div>
